--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,7 @@
-NEO4J_URI=bolt://host.docker.internal:7687
+NEO4J_URI=bolt://neo4j:7687
 NEO4J_USER=neo4j
 NEO4J_PASSWORD=neo4j_password
+NEO4J_DBNAME=neo4j
 
 MONGO_URL=mongodb://mongo:27017/
 
