--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,21 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
 
+  neo4j:
+    image: neo4j:5
+    container_name: neo4j
+    ports:
+      - "7474:7474"
+      - "7687:7687"
+    environment:
+      NEO4J_AUTH: neo4j/neo4j_password
+      NEO4J_dbms_connector_bolt_advertised__address: localhost:7687
+      NEO4J_PLUGINS: '["graph-data-science"]'
+      NEO4J_dbms_security_procedures_unrestricted: gds.*
+      NEO4J_dbms_security_procedures_allowlist: gds.*
+    volumes:
+      - neo4j_data:/data
+
   mongo:
     image: mongo:7
     container_name: mongo
@@ -23,3 +38,4 @@ services:
 
 volumes:
   mongo_data:
+  neo4j_data:
