--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 NEO4J_URI=bolt://host.docker.internal:7687
 NEO4J_USER=neo4j
-NEO4J_PASSWORD=testtest
-NEO4J_DBNAME=movie
+NEO4J_PASSWORD=...
+NEO4J_DBNAME=...
 
 MONGO_URL=mongodb://mongo:27017/
 
